<resources>
    <string name="app_name">SmashBasket</string>
    <string name="logo">Logo</string>
    <string name="background_league">Background Picture</string>
    <string name="desired_league">Desired League</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league
    </string>
    <string name="get_started">Get Started</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="skill_background">Skill Background</string>
    <string name="i_am_a">I am a :</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="welcom_background_image">welcom background image</string>
    <string name="app_logo">app logo</string>
    <string name="finish_background">finish background</string>
    <string name="search_league">Looking for Co-Ed Beginner league near you...</string>
</resources>
